--- a/ping/index.html
+++ b/ping/index.html
@@ -2,11 +2,29 @@
 
 <html>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script>
-      $.getJSON('http://localhost:8080/', function(data){
-        console.log('got some data ay:', data);
-      });
+      var xhr = new XMLHttpRequest();
+      xhr.addEventListener("load", function(){console.log(this.responseText)});
+
+      // put
+      /*var formData = new FormData();
+      formData.append('id', '5');
+      formData.append('name', 'Tam');*/
+      var data = {'id': '5', 'name': 'Tam'};
+
+      xhr.open("put", "http://localhost:8080/");
+      xhr.setRequestHeader('Content-Type', 'application/json');
+      xhr.send(JSON.stringify(data));
+      /*
+      xhr.open("GET", "http://localhost:8080/");
+      xhr.send();
+      
+      xhr.open("post", "http://localhost:8080/");
+      xhr.send();
+ 
+      xhr.open("DELETE", "http://localhost:8080/");
+      xhr.send();
+      */
     </script>
   </head>
   <body>
