Fixed the server handling JSON from the client
So I figured out that I can just send stringified JSON using XHR. But
this meant changin the server to parse JSON, rather than parsing a
querystring.

This will break the spec as that sends the data as a querystring, so I
need to look at changing the spec to send JSON.

But other than that, working. Also added a couple of event handlers to
log progress on data transfer. At some point would like to add a bigger
db so that progress is actually something worht looking at.

--- a/ping/index.html
+++ b/ping/index.html
@@ -4,13 +4,28 @@
   <head>
     <script>
       var xhr = new XMLHttpRequest();
-      xhr.addEventListener("load", function(){console.log(this.responseText)});
+
+      xhr.onloadstart = function(){
+        console.log('Started loading data... ');
+      };
+
+      xhr.onprogress = function(event){
+        if (event.lengthComputable) {
+          console.log('Loaded ', event.loaded, ' bytes of ', event.total, ' so far.');
+        } else {
+          console.log('Length of data not computable');
+        }
+      };
+
+      xhr.onload = function() {
+        console.log(xhr.responseText);
+      };
 
       // put
       /*var formData = new FormData();
       formData.append('id', '5');
       formData.append('name', 'Tam');*/
-      var data = {'id': '5', 'name': 'Tam'};
+      var data = {id: '5', name: 'Tam'};
 
       xhr.open("put", "http://localhost:8080/");
       xhr.setRequestHeader('Content-Type', 'application/json');
